# Metro-Modeler

./: .gitignore  Cargo.toml  building_generation_grammar.typ
shaders/: buildings_fragment.wgsl  buildings_vertex.wgsl  degenerate_point_frag.wgsl  degenerate_point_vert.wgsl  field_visualization_compute.wgsl  tensorfield_fragment.wgsl  tensorfield_vertex.wgsl  visualizer_fragment.wgsl  visualizer_vertex.wgsl
src/: aabb.rs  building_generation.rs  event_queue.rs  field_visualization_component.rs  intersections.rs  main.rs  status.rs  street_graph.rs  street_plan.rs  tensor_field.rs  triangulation.rs  water_mask.rs
