[package]
name = "metro_modeler"
version = "0.1.7"
edition = "2024"

[dependencies]
image = "0.25.6"
nalgebra = "0.33.2"
rand = "0.9.1"
wgpu = "24.0.1"
v4 = { git = "https://github.com/GameHunter101/V4-Engine" }
tokio = { version = "1.45.1", features = ["full"] }
bytemuck = "1.23.0"
rand_chacha = "0.9.0"
