[package]
name = "metro_modeler"
version = "0.2.20"
edition = "2024"

[dependencies]
image = "0.25.6"
nalgebra = "0.33.2"
rand = "0.9.1"
wgpu = "24.0.1"
v4 = { git = "https://github.com/GameHunter101/V4-Engine" }
tokio = { version = "1.45.1", features = ["full"] }
bytemuck = "1.23.0"
rand_chacha = "0.9.0"
futures = "0.3.31"
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
pollster = "0.4.0"
rayon = "1.10.0"
ordered-float = "5.0.0"
cool_utils = { git = "https://github.com/GameHunter101/cool_utils" }
dyn-clone = "1.0.20"
